src/test/deca/syntax/valid/decl_plusieurs_variables_meme_ligne_et_init.deca
// Description:
//    on déclare plusieurs variables sur la même ligne et on les initialise
//
// Resultats:
//    ok

{ int x =1,y =1,z = 2;}
