src/test/deca/syntax/invalid/plusieurs_affectations_meme_ligne_variable.deca
// Description:
//    on initialise une variable avec plusieurs valeurs différentes sur la même ligne
//
// Resultats:
//    Erreur de syntaxe
//    ligne 10 : "left-hand side of assignment is not an lvalue"


{ 
  int x = 3 = 4;
 }
